--- a/src/app/views/dashboard/ProfileAndSetting/tab/tab.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/tab/tab.component.html
@@ -10,6 +10,7 @@
 
   </mat-tab-group>
 
-  <app-update-agent-profile></app-update-agent-profile>
 
+  <app-update-user-profile></app-update-user-profile>
+  <app-share-v-card></app-share-v-card>
 </div>
