--- a/src/app/customUI/dialogs/add-note/add-note.component.html
+++ b/src/app/customUI/dialogs/add-note/add-note.component.html
@@ -4,7 +4,7 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" #closeAddNote>&times;</button>
         <h4 class="modal-title">Add New Note</h4>
       </div>
       <form role="form">
@@ -13,14 +13,15 @@
           <div class="clear paddingTop15"></div>
 
           <div class="form-group">
-            <input type="text" class="form-control" id="name" placeholder="Write your note here...">
+            <input type="text" class="form-control" id="name" placeholder="Write your note here..." [(ngModel)]="note"
+              [ngModelOptions]="{standalone: true}">
           </div>
           <div class="clear paddingTop15"></div>
 
         </div>
         <div class="modal-footer">
           <a data-dismiss="modal" alt="Cancel"><span>Cancel</span></a>
-          <a data-dismiss="modal" alt="Save Changes">Save Changes</a>
+          <a alt="Save Changes" (click)="onSaveClick()">Save Changes</a>
         </div>
       </form>
     </div>
