--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -7,7 +7,8 @@
         <h1 class="t-agent">Notes</h1>
       </div>
       <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span
-          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes">Add New</a></span></div>
+          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes" (click)="onAddNoteClick()">Add
+            New</a></span></div>
     </div>
 
   </div>
