--- a/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 profileWp">
         <div class="profile-pic-wp">
-          <img src="{{userImg}}" placeholder="../../../../../images/placeholder.png" alt=""
+          <img src="{{userImg}}" placeholder="../../../../../images/placeholder.png" onerror="this.src='../../../../../images/placeholder.png'" alt=""
             (click)="onEditProfilePicClick()">
         </div>
         <h4>{{userProfileModel.name}}</h4>
@@ -13,7 +13,7 @@
         </span>
         <a>
           <button type="button" class="btn btn-primary edit-but-orange" (click)="onEditProfileClick()"
-            data-toggle="modal" data-target="#myModal"><img src="../../../../../images/edit-icon.svg" alt="">&nbsp; Edit
+            data-toggle="modal" data-target="#editProfileDetails"><img src="../../../../../images/edit-icon.svg" alt="">&nbsp; Edit
             Profile Details</button>
         </a>
       </div>
@@ -65,7 +65,8 @@
     <div class="row">
       <div class="col-xs-12 col-md-12" *ngIf="userProfileModel.shareable">
         <div class="ag-detail-icons">
-          <a href="#" alt=""><img src="../../../../../images/ic_share_contact.svg" alt=""> &nbsp; Share my vCard</a>
+          <a alt="" (click)="shareVCard()" data-toggle="modal" data-target="#shareMyVcard"><img
+              src="../../../../../images/ic_share_contact.svg" alt=""> &nbsp; Share my vCard</a>
         </div>
       </div>
 
@@ -73,7 +74,7 @@
 
       <div class="col-xs-12 col-md-12">
         <div class="ag-detail-icons">
-          <a href="#" alt=""><img src="../../../../../images/change_password_icon.svg" alt=""> &nbsp; Change
+          <a alt=""><img src="../../../../../images/change_password_icon.svg" alt=""> &nbsp; Change
             Password</a>
         </div>
       </div>
@@ -87,7 +88,8 @@
       <div class="col-xs-4 col-md-6 visibleBtnWp noPadding">
         <span class="onOffTxt">Off</span>
         <label class="switch">
-          <input type="checkbox" [(ngModel)]="userProfileModel.shareable" (ngModelChange)="onShareableStatusChange($event)">
+          <input type="checkbox" [(ngModel)]="userProfileModel.shareable"
+            (ngModelChange)="onShareableStatusChange($event)">
           <span class="slider round"></span>
         </label>
         <span class="onOffTxt">On</span>
@@ -97,4 +99,5 @@
 
   </div>
 
+  
 </div>
