--- a/src/app/views/dashboard/favorites/favorites.component.html
+++ b/src/app/views/dashboard/favorites/favorites.component.html
@@ -1,23 +1,19 @@
 <div class="container app-bg2">
   <div class="row">
-    <div class="col-xs-12 col-md-6 cell-bg">
-      <div class="agent-detail">
-        <div class="dp">
-          <img src="../../../../images/baseline-business-24px.svg" alt="" />
-          <div class="dpProfile_wp proActiBg">A</div>
+    <ul>
+      <li *ngFor="let item of favorites">
+        <div class="col-xs-12 col-md-6 cell-bg">
+          <div class="agent-detail">
+            <div class="dp">
+              <img
+                src="{{item.entity=='Agent'?'../../../../images/baseline-business-24px.svg':'../../../../images/ic_note_profile.svg'}}"
+                alt="" />
+              <div class="dpProfile_wp proActiBg">A</div>
+            </div>
+            <h4>{{item.entityName}}<span>({{item.entityID}})</span></h4> <span>{{item.city+','+item.state}}</span>
+          </div>
         </div>
-        <h4>NETCO. Inc <span>(Agent ID)</span></h4> <span>Las Vegas, NV</span>
-      </div>
-    </div>
-
-    <div class="col-xs-12 col-md-6 cell-bg">
-      <div class="agent-detail">
-        <div class="dp">
-          <img src="../../../../images/ic_note_profile.svg" alt="">
-          <div class="dpProfile_wp proActiBg">A</div>
-        </div>
-        <h4>Richard <span>(Person ID)</span></h4> <span>Las Vegas, NV</span>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </div>
