--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -246,3 +246,6 @@ mat-ink-bar.mat-ink-bar {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+#errorDiv{
+  color: red;
+}
