--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -246,6 +246,15 @@ mat-ink-bar.mat-ink-bar {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-#errorDiv{
+
+#errorDiv {
   color: red;
+}
+
+.agent-detail h4 a {
+  font-size: 14px;
+  font-weight: bold;
+  color: #F68933;
+  padding: 0px;
+  margin: 5px 0px 0px 0px;
 }
