--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -6,13 +6,16 @@
           <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}}
             onerror="this.src='../../../../images/placeholder.png'" alt="" />
         </div>
-        <h4>{{agentInfo.name}}</h4> <span class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
+        <h4>{{agentInfo.name}}<a><img
+              src="{{agentInfo.favorite?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt=""
+              (click)="onStarClick(item)"></a></h4> <span
+          class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
         <div class="clearfix"></div>
-        <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
+        <!-- <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
         <div class="amount bx2"><span><img src="../../../../images/share.svg" alt="" (click)="sendVCard()" /></span>
         </div>
         <div class="amount bx3"><span><img src="../../../../images/doc.svg" alt=""
-              (click)="openLocationOnMap()" /></span></div>
+              (click)="openLocationOnMap()" /></span></div> -->
       </div>
     </div>
 
