--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -16,13 +16,16 @@
       <div class="col-xs-12 col-md-6 cell-bg">
         <div class="col-xs-6 col-md-6 noPadding">
           <div class="ag-detail-icons">
-            <a href="#" alt=""><img src="../../../../images/ic_share_contact.svg" alt=""> Share vCard</a>
+            <a alt="" (click)="shareVCard()" data-toggle="modal" data-target="#shareMyVcard"><img src="../../../../images/ic_share_contact.svg" alt=""
+                > Share
+              vCard</a>
           </div>
         </div>
 
         <div class="col-xs-6 col-md-6 noPadding">
           <div class="ag-detail-icons">
-            <a href="#" alt=""><img src="../../../../images/ic_share_location.svg" alt=""> Share Location</a>
+            <a alt="" (click)="openLocationOnMap()"><img src="../../../../images/ic_share_location.svg" alt="">
+              Share Location</a>
           </div>
         </div>
       </div>
@@ -81,3 +84,4 @@
   </div>
 </div>
 <app-update-agent-profile></app-update-agent-profile>
+<app-share-v-card></app-share-v-card>
