--- a/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
@@ -30,7 +30,7 @@
           <h4>Phone 1</h4>
           <span>
             <a (click)="doCall(userProfileModel.phone)">{{userProfileModel.phone}}</a> <br />
-            Mobile
+            {{userProfileModel.phoneType}}
           </span>
         </div>
       </div>
@@ -41,7 +41,7 @@
           <h4>Phone 2</h4>
           <span>
             <a (click)="doCall(userProfileModel.phone2)">{{userProfileModel.phone2}}</a> <br />
-            Fax
+            {{userProfileModel.phone2Type}}
           </span>
         </div>
       </div>
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div class="ag-detail-icons">
-          <a href="mailto:bradleykjohnson@abc.com" alt=""><img src="../../../../../images/mail-icon.svg" alt=""> &nbsp;
+          <a href=" {{'mailto:'+userProfileModel.email}}" alt=""><img src="../../../../../images/mail-icon.svg" alt=""> &nbsp;
             {{userProfileModel.email}}</a>
         </div>
       </div>
