--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -13,43 +13,48 @@
       </form>
     </div>
 
-  </div>
-  <div class="bottom-bord"></div>
-  <div class="serach-result">
 
-    <div class="row" *ngIf="hideNoDataDiv">
-      <ul>
-        <li *ngFor="let item of searchedUsers" (click)="onItemClick(item)">
-          <div class="col-xs-12 col-md-6 cell-bg">
-            <div class="agent-detail ag-perform">
-              <div class="dp"><img
-                  src="{{item.type=='Agent'?'../../../../../../images/building-icon.svg':'../../../../../../images/username.svg'}}"
-                  alt="" /></div>
-              <h4>{{item.name}}<a><img
-                    src="{{item.favorite?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt=""
-                    (click)="onStarClick(item)"></a></h4> <span>{{getAddress(item)}}</span>
-              <div class="clearfix"></div>
-              <div class="amount"><span class="year">Net Premium</span><br>
-                <span class="price green">$ {{item.netPermium}}</span></div>
-              <div class="clearfix"></div>
+    <div class="bottom-bord"></div>
+    <div class="clearfix paddingTop15"></div>
+
+    <div class="serach-result">
+
+      <div class="row" *ngIf="hideNoDataDiv">
+        <ul>
+          <li *ngFor="let item of searchedUsers">
+            <div class="col-xs-12 col-md-6 cell-bg">
+              <div class="agent-detail ag-perform">
+                <div class="dp" (click)="onItemClick(item)"><img
+                    src="{{item.type=='Agent'?'../../../../../../images/building-icon.svg':'../../../../../../images/username.svg'}}"
+                    alt="" /></div>
+                <h4><a (click)="onItemClick(item)">{{item.name}}</a><a><img
+                      src="{{item.favorite?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                      alt="" (click)="onStarClick(item)"></a></h4> <span (click)="onItemClick(item)">{{getAddress(item)}}</span>
+                <div class="clearfix"></div>
+                <div class="amount" (click)="onItemClick(item)">
+                  <span class="year">Net Premium</span><br>
+                  <span class="price green">$ {{item.netPermium}}</span>
+                </div>
+                <div class="clearfix"></div>
+              </div>
             </div>
-          </div>
 
-        </li>
-      </ul>
-      <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-          class="glyphicon glyphicon-arrow-up"></span></button>
-      <div class="load-more-div" *ngIf="moreDataAvailable">
-        <span class="straight-line"></span>
-        <span class="load-more-text" (click)="onLoadMoreClick()">Load More</span>
-        <span class="straight-line"></span>
+          </li>
+        </ul>
+        <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+            class="glyphicon glyphicon-arrow-up"></span></button>
+        <div class="load-more-div" *ngIf="moreDataAvailable">
+          <span class="straight-line"></span>
+          <span class="load-more-text" (click)="onLoadMoreClick()">Load More</span>
+          <span class="straight-line"></span>
+
+        </div>
 
       </div>
-
-    </div>
-    <div class="serach-emp" *ngIf="!hideNoDataDiv">
-      <h2><em>It is Empty Here!</em></h2>
-      <p><em>Please use the search bar to search for Agents and People or use the filter button to alter search
-          attributes</em></p>
+      <div class="serach-emp" *ngIf="!hideNoDataDiv">
+        <h2><em>It is Empty Here!</em></h2>
+        <p><em>Please use the search bar to search for Agents and People or use the filter button to alter search
+            attributes</em></p>
+      </div>
     </div>
   </div>
