search filter logic added

--- a/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
@@ -9,7 +9,7 @@
         <h4>{{userProfileModel.name}}</h4>
         <span>
           {{userProfileModel.jobTitle}} <br>
-          {{userProfileModel.address1+' '+userProfileModel.address2+' '+userProfileModel.city+' '+userProfileModel.state}}
+          {{userProfileModel.addr1+' '+userProfileModel.addr2+' '+userProfileModel.city+' '+userProfileModel.state}}
         </span>
         <a>
           <button type="button" class="btn btn-primary edit-but-orange" (click)="onEditProfileClick()"
