--- a/src/app/customUI/dialogs/change-profile-dialog/change-profile-dialog.component.html
+++ b/src/app/customUI/dialogs/change-profile-dialog/change-profile-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="modal-header nobord">
     <h5 class="modal-title text-center" id="exampleModalLabel">Change profile Picture</h5>
   </div>
-  <div class="change-dp"><img [src]="croppedImage" alt="" (click)="file.click()" /></div>
+  <div class="change-dp"><img [src]="croppedImage" alt="" (click)="file.click()" onerror="this.src='../../../../images/placeholder.png'"/></div>
   <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="3 / 3"
     [resizeToWidth]="150" format="png" (imageCropped)="imageCropped($event)" (loadImageFailed)="loadImageFailed()">
   </image-cropper>
