--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -265,6 +265,20 @@ mat-ink-bar.mat-ink-bar {
   border-radius: 70px;
 }
 
-.marginTop20{
+.marginTop20 {
   margin-top: 20px;
+}
+
+.marginBottom40 {
+  margin-bottom: 40px;
+}
+
+.cdk-overlay-pane {
+  display: contents !important;
+}
+
+.mat-snack-bar-container {
+  max-width: 40% !important;
+  background: #F68933 !important;
+  color: white !important;
 }
