--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -1,140 +1,44 @@
-<div class="container">
-  <div class="nav-bg row wrapper">
-    <div class="col-xs-2 toppad"><img src="../../../../../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-    <div class="col-xs-8 text-center">
-      <h1 class="t-agent">13 Month Activity</h1>
-    </div>
-    <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()"  alt="" data-toggle="modal" data-target="#recentAssociatesl"><img
-          src="../../../../../../../../images/baseline-history.svg" alt=""></a></div>
-  </div>
-  <div class="container ">
+<div class="container-fluid nospace">
+  <div class="container nav-bg">
     <div class="row">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10 divider"></div>
-      <div class="col-xs-1"></div>
+      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+      <div class="col-xs-8 text-center">
+        <h1 class="t-agent">13 Month Activity</h1>
+      </div>
+      <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
+          data-target="#recentAssociatesl"><img src="../../../..//images/baseline-history.svg" alt=""></a></div>
     </div>
   </div>
-  <div class="container app-bg2 bottom-wrapper-for-back">
+  <div class="container app-bg2">
     <div class="row">
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Anne D. Coley <span>(110)</span></h4> <span>Title here</span> <span class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
+
+      <ul>
+        <li *ngFor="let item of associatesModels">
+          <div class="col-xs-12 col-md-6 cell-bg">
+            <div class="agent-detail-associates">
+              <div class="dp">
+                <img src="../../../../images/ic_note_profile.svg" alt="" />
+                <div class="dpProfile_wp proActiBg">A</div>
+              </div>
+              <h4>{{item.dispName}} <span>({{item.personID}})</span></h4> <span>{{getAddress(item)}}</span> <span
+                class="date">4-4-2018</span>
+              <div class="clearfix"></div>
+              <div class="row">
+                <div class="col-md-12 col-xs-12">
+                  <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" />
+                    <span>{{item.agentName}}</span></div>
+                </div>
+              </div>
+
             </div>
           </div>
-
+        </li>
+      </ul>
+      <div class="row" *ngIf="moreDataAvailable">
+        <div class="col-xs-12 col-md-12 loadMoreWp">
+          <hr />
+          <div class="loadMore"><a alt="Load More" (click)="onLoadMoreClick()" >Load More</a></div>
         </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Bhavin Patel <span>(108)</span></h4> <span>Title here</span> <span class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Kristi marie Moretz-Icard <span>(107)</span></h4> <span>Title here</span> <span
-            class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Ahmed Khan <span>(196)</span></h4> <span>Title here</span> <span class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Olivia Ortan <span>(203)</span></h4> <span>Title here</span> <span class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail-associates">
-          <div class="dp">
-            <img src="../../../../images/ic_note_profile.svg" alt="" />
-            <div class="dpProfile_wp proActiBg">A</div>
-          </div>
-          <h4>Person Full Name <span>(ID)</span></h4> <span>Title here</span> <span class="date">4-4-2018</span>
-          <div class="clearfix"></div>
-          <div class="row">
-            <div class="col-md-12 col-xs-12">
-              <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" /> <span>
-                  Associated
-                  Agent Name</span></div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-12 loadMoreWp">
-        <hr />
-        <div class="loadMore"><a href="#" alt="Load More">Load More</a></div>
       </div>
     </div>
   </div>
